fixed type acquisition

--- a/Graphs/jsconfig.json
+++ b/Graphs/jsconfig.json
@@ -2,7 +2,7 @@
     "typeAcquisition": {
         "include": [
             "lodash",
-            "jQuery",
+            "jquery",
             "cytoscape",
             "mathjs",
         ]
