--- a/Graphs/jsconfig.json
+++ b/Graphs/jsconfig.json
@@ -1,4 +1,7 @@
 {
+    "compilerOptions": {
+        "target": "ES6"
+    },
     "typeAcquisition": {
         "include": [
             "lodash",
@@ -8,7 +11,6 @@
         ]
     },
     "exclude": [
-        "js/runtime.js",
         "js/MWMMT.js"
     ],
 }
