--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
         "no-restricted-syntax": "off",
         "no-continue": "off",
         "guard-for-in": "warn",
-        "no-constant-condition": "off"
+        "no-constant-condition": "off",
+        "no-shadow": "warn"
     },
     "env": {
         "browser": true,
